Summary stats updated with new datasets
- change order of grouping variables
- explain why only surfaces with >20% NMP are excluded at that stage
- display how many surfaces have been filtered out

--- a/R_analysis/scripts/SSFA_2_Summary-stats.Rmd
+++ b/R_analysis/scripts/SSFA_2_Summary-stats.Rmd
@@ -106,7 +106,7 @@ nminmaxmeanmedsd <- function(x){
 ## Define grouping and numerical variables to use
 ```{r}
 # Define grouping variables
-grp <- c("Dataset", "Software", "Diet", "Treatment", "Before.after", "NMP_cat")
+grp <- c("Dataset", "Diet", "Treatment", "Before.after", "NMP_cat", "Software")
 ```
 
 The following grouping variables will be used: 
@@ -120,10 +120,15 @@ cat(colnames(select(all_data, where(is.numeric))), sep="\n")
 ```
 
 
-## Exclude surfaces with NMP > 20%
+## Exclude surfaces with NMP >= 20%
 ```{r}
 data_nmp0_20 <- filter(all_data, NMP_cat != "20-100%")
+str(data_nmp0_20)
 ```
+
+Surfaces with more than 20% NMP are likely the result of issues during acquisition and must be excluded. While surfaces having more than 10% (or 5%) NMP can also be problematic, they are still included in the summary statistics. Nevertheless, the summary statistics will be calculated for each NMP category (i.e. 0-5, 5-10 and 10-20% NMP).  
+
+`r nrow(all_data) - nrow(data_nmp0_20)` surfaces have been filtered out, i.e. `r (nrow(all_data) - nrow(data_nmp0_20))/2` surfaces for each software package.  
 
 
 ## Compute summary statistics
