Saved output again.

--- a/Python_analysis/code/Statistical_Model_NewEplsar_filter_strong.ipynb
+++ b/Python_analysis/code/Statistical_Model_NewEplsar_filter_strong.ipynb
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Statistical_Model_NewEplsar_filter_strong.ipynb to html\n",
-      "[NbConvertApp] Writing 1076733 bytes to Statistical_Model_NewEplsar_filter_strong.html\n"
+      "[NbConvertApp] Writing 4781573 bytes to Statistical_Model_NewEplsar_filter_strong.html\n"
      ]
     }
    ],
@@ -2935,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2951,13 @@
       "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
       "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
       "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
-      "[NbConvertApp] Writing 31345 bytes to Statistical_Model_NewEplsar_filter_strong.md\n"
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Making directory Statistical_Model_NewEplsar_filter_strong_files\n",
+      "[NbConvertApp] Writing 45656 bytes to Statistical_Model_NewEplsar_filter_strong.md\n"
      ]
     }
    ],
