Update README files and delete old files

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,8 +48,6 @@ The [DESCRIPTION](/DESCRIPTION) file contains information about the version, aut
 
 The [`r repo`.Rproj](/`r repo`.Rproj) file is the RStudio project file.
 
-The [checksums.Rmd](/checksums.Rmd) file gives the MD5 checksums for all files in the R and Python analyses folders. Rendered to [checksums.md](/checksums.md).
-
 The [R_analysis](/R_analysis) directory contains all files related to the R analysis. It is composed of the following folders:
 
 - [:file_folder: derived_data](/R_analysis/derived_data): output data generated during the analysis (script [SSFA_1\_Import.Rmd](/R_analysis/scripts/SSFA_1_Import.Rmd)).  
@@ -77,33 +75,31 @@ The [Python_analysis](/Python_analysis) directory contains all files related to 
 
 The [code](/Python_analysis/code) folder contains the following files:
 
+- `*.ipynb` files: notebooks, rendered to HTML (`*.html`) and MD (`*.md`) files.  
+- The sub-folders (`Statistical_Model_*_files/`) contain the PNG images of the rendered MD files.  
 - [plotting_lib.py](/Python_analysis/code/plotting_lib.py): custom Python library with mainly functions for plotting and other auxiliary functions.  
-- [Preprocessing.ipynb](/Python_analysis/code/Preprocessing.ipynb): notebook of the pre-processing of the raw data. Rendered to [Preprocessing.html](/Python_analysis/code/Preprocessing.html) and [Preprocessing.md](/Python_analysis/code/Preprocessing.md).  
-- [Statistical_Model_ThreeFactor.ipynb](/Python_analysis/code/Statistical_Model_ThreeFactor.ipynb): notebook of the three-factor model. Rendered to [Statistical_Model_ThreeFactor.html](/Python_analysis/code/Statistical_Model_ThreeFactor.html) and [Statistical_Model_ThreeFactor.md](/Python_analysis/code/Statistical_Model_ThreeFactor.md).  
-- [Statistical_Model_TwoFactor.ipynb](/Python_analysis/code/Statistical_Model_TwoFactor.ipynb): notebook of the two-factor model. Rendered to [Statistical_Model_TwoFactor.html](/Python_analysis/code/Statistical_Model_TwoFactor.html) and [Statistical_Model_TwoFactor.md](/Python_analysis/code/Statistical_Model_TwoFactor.md).  
-- [Statistical_Model_NewEplsar.ipynb](/Python_analysis/code/Statistical_Model_NewEplsar.ipynb): notebook of the NewEplsar model Rendered to [Statistical_Model_NewEplsar.html](/Python_analysis/code/Statistical_Model_NewEplsar.html) and [Statistical_Model_NewEplsar.md](/Python_analysis/code/Statistical_Model_NewEplsar.md).  
-- The sub-folders (Statistical_Model_*_files) contains the PNG images of the rendered MD files.
 
 The [derived_data](/Python_analysis/derived_data) folder contains the following files, organized in sub-folders for each model:
 
-- [preprocessed.dat](/Python_analysis/derived_data/preprocessing/preprocessed.dat): pre-processed raw data, used as input to the models.  
+- [`*.dat` files](/Python_analysis/derived_data/preprocessing): pre-processed raw data, used as input to the models.  
 - `*.pkl` files: Serialized model object and traces of the statistical models.  
 - `*.npy` files (two-factor model only): parameter samples for some model parameters from the run of the two factor model for *epLsar*.  
-- `hdi_*.csv`: 95% high probability density intervals of the contrasts in table form and CSV format.  
-- `summary.csv`: summary of the results in table form and CSV format.
+- `*_hdi_*.csv`: 95% high probability density intervals of the contrasts in table form and CSV format.  
+- `*_summary_*.csv`: summary of the results in table form and CSV format.
 
 The [plots](/Python_analysis/plots) folder contains the following files, organized in sub-folders for each model:
 
-- `contrast_*.pdf` files: contrast plots of ConfoMap vs. Toothfrax from the three-factor model.   
-- `posterior_b_*.pdf` files: distribution of posteriors.  
-- `posterior_forest_*.pdf` files: plots of model parameter distributions and their HDIs, effective sample sizes (ess) and r_hat statistic.  
-- `posterior_pair_*.pdf` files: plots of joint distributions of model parameters.  
-- `posterior_parallel_*.pdf` files: plots of sampled posterior points. Used for checking sampling reliability.  
-- `prior_posterior_*.pdf` files: prior and posterior distributions of the model parameters.  
-- `prior_predictive_*.pdf` files: prior-predictive plots of the surface parameters.  
-- `prior_posterior_predictive_*.pdf` files: prior and posterior-predictive plots of the surface parameters.  
-- `trace_*.pdf` files: trace plots.  
-- `treatment_pairs_*.pdf` files: Contrast plots of treatment pairs for ConfoMap and Toothfrax from the two-factor and NewEplsar models.
+- `*_contrast_*.pdf` files: contrast plots of ConfoMap vs. Toothfrax from the three-factor model.   
+- `*_posterior_b_*.pdf` files: distribution of posteriors.  
+- `*_posterior_forest_*.pdf` files: plots of model parameter distributions and their HDIs, effective sample sizes (ess) and r_hat statistic.  
+- `*_posterior_pair_*.pdf` files: plots of joint distributions of model parameters.  
+- `*_posterior_parallel_*.pdf` files: plots of sampled posterior points. Used for checking sampling reliability.  
+- `*_prior_posterior_*.pdf` files: prior and posterior distributions of the model parameters.  
+- `*_prior_predictive_*.pdf` files: prior-predictive plots of the surface parameters.  
+- `*_prior_posterior_predictive_*.pdf` files: prior and posterior-predictive plots of the surface parameters.  
+- `*_trace_*.pdf` files: trace plots.  
+- `*_treatment_diff_*.pdf` files: Contrast plots of treatment pairs that differ between the software packages.  
+- `*_treatment_pairs_*.pdf` files: Contrast plots of treatment pairs for ConfoMap and Toothfrax from the two-factor and NewEplsar models.
 
 Note that the HTML files are not rendered nicely on GitHub; you need to download them and open them with your browser. Use the MD files to view on GitHub. However, MD files do not have all functionalities of HTML files (numbered sections, floating table of content). I therefore recommend using the HTML files.  
 To download an HTML file from GitHub, first display the "raw" file and then save it as HTML.
@@ -115,10 +111,10 @@ Here are direct links to display the files directly in your browser:
 - [SSFA_1_Import.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/R_analysis/scripts/SSFA_1_Import.html)  
 - [SSFA_2_Summary-stats.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/R_analysis/scripts/SSFA_2_Summary-stats.html)  
 - [SSFA_3_Plots.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/R_analysis/scripts/SSFA_3_Plots.html)  
-- [Preprocessing.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Preprocessing.html)
-- [Statistical_Model_ThreeFactor.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_ThreeFactor.html)  
-- [Statistical_Model_TwoFactor.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_TwoFactor.html)  
-- [Statistical_Model_NewEplsar.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_NewEplsar.html)
+- [Preprocessing_filter_strong.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Preprocessing_filter_strong.html)
+- [Statistical_Model_ThreeFactor_filter_strong.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_ThreeFactor_filter_strong.html)  
+- [Statistical_Model_TwoFactor_filter_strong.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_TwoFactor_filter_strong.html)  
+- [Statistical_Model_NewEplsar_filter_strong.html](http://htmlpreview.github.io/?https://github.com/tracer-monrepos/SSFAcomparisonPaper/blob/master/Python_analysis/code/Statistical_Model_NewEplsar_filter_strong.html)
 
 The [renv.lock](/renv.lock) file is the lockfile describing the state of the R project's library. It is associated to the [activation script](/renv/activate.R) and the R project's library. All these files have been created using the package [renv](https://rstudio.github.io/renv/index.html).
 
@@ -135,7 +131,7 @@ The simplest way to explore the R analysis is to open an instance of RStudio in 
 
 If you want to work locally with the R analysis, either from the ZIP archive or from cloning the GitHub repository to your computer:
 
-- open the ``r repo`.Rproj` file in RStudio; this takes some time the first time.  
+- open the [`r repo`.Rproj](/`r repo`.Rproj) file in RStudio; this takes some time the first time.  
 - run `renv::status()` and then `renv::restore()` to restore the state of your project from [renv.lock](/renv.lock). Make sure that the package `devtools` is installed to be able to install packages from source.
 
 Using the package `renv` implies that installing, removing and updating packages is done within the project. In other words, all the packages that you install/update while in a project using `renv` will not be available in any other project. If you want to globally install/remove/update packages, make sure you close the project first.
@@ -147,12 +143,10 @@ Alternatively, if you use GitHub, you can [fork and clone](https://happygitwithr
 
 # Licenses
 
-**Text and figures :**
-[CC-BY-4.0](http://creativecommons.org/licenses/by/4.0/)  
+**Data, text and figures :**
+[CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/)  
 **Code :** See the [DESCRIPTION](/DESCRIPTION),
 [LICENSE.md](/LICENSE.md) and [LICENSE](/LICENSE) files.  
-**Data :** [CC-0](http://creativecommons.org/publicdomain/zero/1.0/)
-attribution requested in reuse
 
 # Contributions
 
