--- a/README.Rmd
+++ b/README.Rmd
@@ -22,9 +22,7 @@ repo <- basename(getwd())
 
 This repository contains the data and code for the paper:
 
-> `r Authors` (year [TBA]). *`r Title`* PCI Archaeology. <https://doi.org/10.5281/zenodo.4671438>
-
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4671438.svg)](https://doi.org/10.5281/zenodo.4671438)
+> `r Authors` (2022). *`r Title`* Peer Community Journal 2: e77. <https://doi.org/10.24072/pcjournal.204>
 
 # How to cite
 
